<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LoginScreen</string>
    <string name="username">UserName</string>
    <string name="password">PassWord</string>
    <string name="login">Login</string>
    <string name="sifre">Şifre</string>
    <string name="kullan_c_ad">Kullanıcı Adı</string>
    <string name="register">Register</string>
    <string name="yeni_giris">Yeni Giriş</string>
</resources>