<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/vector_2"
        android:layout_width="361dp"
        android:layout_height="193dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/ic_vector_2"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>
    <View
        android:id="@+id/vector_3"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_vector_3"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/vector_4"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/vector4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/vector_5"
        android:layout_width="411dp"
        android:layout_height="265dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/vector5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/vector_5"
        app:layout_constraintEnd_toEndOf="@+id/vector_2"
        app:layout_constraintTop_toTopOf="@+id/vector_5"
        app:layout_constraintVertical_bias="0.786" />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="310dp"
        android:layout_height="114dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="100dp"
        android:background="@drawable/editstyle"
        android:elevation="6.19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vector_5">

    </View>

    <EditText
        android:id="@+id/EditTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="UserName"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/EditPassWord"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1"
        app:layout_constraintVertical_bias="0.166" />

    <EditText
        android:id="@+id/EditPassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/hint"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_1"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toBottomOf="@+id/EditTextUserName"
        tools:ignore="TextFields" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/EditTextUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EditTextUserName"
        app:srcCompat="@drawable/ic_user" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/EditPassWord"
        app:layout_constraintEnd_toStartOf="@+id/EditPassWord"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toBottomOf="@+id/EditTextUserName"
        app:srcCompat="@drawable/ic_lock" />

    <ImageButton
        android:id="@+id/buttonGiris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="57dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rectangle_1"
        app:layout_constraintTop_toBottomOf="@+id/vector_5"
        app:srcCompat="@drawable/ic_button_giris"
        tools:srcCompat="@drawable/ic_button_giris" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle1"
        app:layout_constraintBottom_toTopOf="@+id/vector_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1"
        app:layout_constraintVertical_bias="0.551" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        app:srcCompat="@drawable/register" />

    <ImageButton
        android:id="@+id/ButtonKayit"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toEndOf="@+id/rectangle_2"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1"
        app:srcCompat="@drawable/ic_button_giris"
        tools:srcCompat="@drawable/ic_button_giris">

    </ImageButton>


</androidx.constraintlayout.widget.ConstraintLayout>